--- a/data-architect.html
+++ b/data-architect.html
@@ -110,7 +110,7 @@ Developer Central. Solutions. Retail ? Hospitality ? Acquirers ? Petro. Support.
 support the implementation of a customer data lake. You should be able to 
 effectively?...</p>
 <hr/>
-<h5><a href='http://klook.applytojob.com/apply/pCa6CpsqXK/Data-Architect-SZ'>Data Architect (SZ) - Klook - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://klook.applytojob.com/apply/pCa6CpsqXK/Data-Architect-SZ'>Data Architect (SZ) - Klook - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -141,7 +141,7 @@ applications?...</p>
 <p>3 days ago ... We are looking to add a Data Architect to our team here at Centare. In this newly 
 created role, you will be responsible for building the foundation of our?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters83/743999692064340-health-care-data-architect-130k-160k-immediate-health-care-benefits-401k-20-days-pto-plus-more-'>IT Pros Health Care Data Architect  ($130K-$160K / Immediate Health Care Benefits / 401k / 20-days PTO / Plus More) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters83/743999692064340-health-care-data-architect-130k-160k-immediate-health-care-benefits-401k-20-days-pto-plus-more-'>IT Pros Health Care Data Architect  ($130K-$160K / Immediate Health Care Benefits / 401k / 20-days PTO / Plus More) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -192,11 +192,11 @@ high performing applications using NOSQL DB and BigData...</p>
 model, and performance of data solutions; influence change and enforce data 
 best?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/datastrong/job/oRmyafwF'>Datastrong Careers - Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/datastrong/job/oRmyafwF'>Datastrong Careers - Data Architect</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SprySquaredInc/743999691685548-big-data-architect'>Spry Squared, Inc. Big Data Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SprySquaredInc/743999691685548-big-data-architect'>Spry Squared, Inc. Big Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -208,7 +208,7 @@ best?...</p>
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/data-technical-architect-21453-dN0vtqP7yr6B6eaKkRyNN8'>Data/Technical Architect-21453 #0171 job at Radiant Digital in Lake Mary, FL, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/data-technical-architect-21453-dN0vtqP7yr6B6eaKkRyNN8'>Data/Technical Architect-21453 #0171 job at Radiant Digital in Lake Mary, FL, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -216,7 +216,7 @@ best?...</p>
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/santander-consumer-usa/job/oEUvafwX'>Santander Consumer USA Careers - Data Architect</a></h5> 
+<h5><a href='https://jobs.jobvite.com/santander-consumer-usa/job/oEUvafwX'>Santander Consumer USA Careers - Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Owns data design solution and related artifacts of one or more assigned domain. 
 Acts as a data SME for those domains. Responsible for all issues and its?...</p>
@@ -254,7 +254,7 @@ database models; Documentation of functional requirements and system?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/gettyimages/job/ohGwafwn'>Getty Images Careers - Enterprise Data Architect</a></h5> 
+<h5><a href='http://jobs.jobvite.com/gettyimages/job/ohGwafwn'>Getty Images Careers - Enterprise Data Architect</a></h5> 
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -317,7 +317,7 @@ class?...</p>
 <p>Jun 29, 2019 ... We're looking for an expert communicator with a strong customer orientation and 
 object-oriented programming experience to join our IT team as a Data Architect?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999691378266-data-architect'>CapTech Consulting Data Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999691378266-data-architect'>CapTech Consulting Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
@@ -373,7 +373,7 @@ implementation of ETL processes throughout the design, build and maintenance
 <p>Jun 24, 2019 ... We're looking for a GCP Data Architect who can design and implement modern 
 architecture for a diverse set of customers and industries. The ideal candidate?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/unusual/371b0b6f-2831-4d72-bacd-72c69136edc2'>Unusual Ventures - Senior Data Warehouse Architect</a></h5> 
+<h5><a href='https://jobs.lever.co/unusual/371b0b6f-2831-4d72-bacd-72c69136edc2'>Unusual Ventures - Senior Data Warehouse Architect</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
@@ -414,7 +414,7 @@ Security Engineer, Cyber Operations (TS/SCI Polygraph Clearance). Annapolis?...<
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-06-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/primerevenue/job/ohWv9fwB'>PrimeRevenue Careers - Director, Data Architecture</a></h5> 
+<h5><a href='https://jobs.jobvite.com/primerevenue/job/ohWv9fwB'>PrimeRevenue Careers - Director, Data Architecture</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
@@ -438,7 +438,7 @@ Security Engineer, Cyber Operations (TS/SCI Polygraph Clearance). Annapolis?...<
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on:: 2019-06-28</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/averityteam/job/h3d31emchei4baa74ngiryd3gw'>Solutions Data Architect ($200K) | Averity</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/h3d31emchei4baa74ngiryd3gw'>Solutions Data Architect ($200K) | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-06-28</p>
 <hr/>
